compile.log
make[1]: Nothing to be done for `all'.
make[1]: Nothing to be done for `relocs'.
  CHK     include/generated/uapi/linux/version.h
  CHK     include/generated/utsrelease.h
  CALL    scripts/checksyscalls.sh
  CHK     include/generated/compile.h
  PASYMS  arch/x86/realmode/rm/pasyms.h
  LDS     arch/x86/realmode/rm/realmode.lds
  LD      arch/x86/realmode/rm/realmode.elf
  RELOCS  arch/x86/realmode/rm/realmode.relocs
  OBJCOPY arch/x86/realmode/rm/realmode.bin
  AS      arch/x86/realmode/rmpiggy.o
  LD      arch/x86/realmode/built-in.o
  VDSOSYM arch/x86/vdso/vdso-syms.lds
  VDSOSYM arch/x86/vdso/vdsox32-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-int80-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-syscall-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-sysenter-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-syms.lds
  LD      arch/x86/vdso/built-in.o
  LD      arch/x86/built-in.o
  CC [M]  drivers/net/xen-netback/netback.o
drivers/net/xen-netback/netback.c: In function ‘xen_netbk_schedule_xenvif’:
drivers/net/xen-netback/netback.c:892:29: error: ‘struct xen_netif_tx_back_ring’ has no member named ‘size’
  uint16_t req_size = vif->tx.size;
                             ^
drivers/net/xen-netback/netback.c: In function ‘tx_credit_exceeded’:
drivers/net/xen-netback/netback.c:1452:2: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
  unsigned long T_alloc = msecs_to_jiffies(vif->credit_usec / 1000);
  ^
In file included from include/linux/cache.h:4:0,
                 from include/linux/time.h:4,
                 from include/linux/stat.h:18,
                 from include/linux/module.h:10,
                 from drivers/net/xen-netback/common.h:32,
                 from drivers/net/xen-netback/netback.c:35:
include/linux/kernel.h:661:17: warning: comparison of distinct pointer types lacks a cast [enabled by default]
  (void) (&_min1 == &_min2);  \
                 ^
drivers/net/xen-netback/netback.c:1479:33: note: in expansion of macro ‘min’
   unsigned long reduce_credit = min((long) ((C_actu - C_alloc) / 2), 0 - credit_public);
                                 ^
include/linux/kernel.h:661:17: warning: comparison of distinct pointer types lacks a cast [enabled by default]
  (void) (&_min1 == &_min2);  \
                 ^
drivers/net/xen-netback/netback.c:1497:30: note: in expansion of macro ‘min’
   unsigned long add_credit = min((long) (((C_actu * T_alloc) / T_actu - C_actu) / 2), credit_public);
                              ^
make[3]: *** [drivers/net/xen-netback/netback.o] Error 1
make[2]: *** [drivers/net/xen-netback] Error 2
make[1]: *** [drivers/net] Error 2
make: *** [drivers] Error 2
